# mecha_control

./: CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: CI_Check.yml
action/: DaizaCmd.action  HinaCmd.action  MechCmd.action
arduino/daiza_control/scripts/: daiza_controller.py
arduino/daiza_control/src/: main.cpp
arduino/mecha_control_arduino/: platformio.ini
arduino/mecha_control_arduino/html/: mecha_controller.html
arduino/mecha_control_arduino/scripts/: mecha_controller.py  mecha_controller_by_key.py  mecha_controller_with_html.py
arduino/mecha_control_arduino/src/: main.cpp
arduino/ningyo_control/: platformio.ini
arduino/ningyo_control/scripts/: gijutu_eigo.md  ningyo_controller.py
arduino/ningyo_control/src/: main.cpp
mecha_control/: debug_controller.py  debug_sequence_controller.py  dummy_node.py  mecha_control_node.py  path_command_publisher.py
msg/: ActuatorCommands.msg  DaizaCmdType.msg  HinaCmdType.msg  MechAction.msg  MechaState.msg  PointAndMechaState.msg  PointAndMechaStateArray.msg  SensorStates.msg
src/: cmd_seq.cpp  cmd_seq_class.hpp  mech.hpp  sequence_controller.cpp
srv/: MechCmd.srv
